--- a/app/src/main/res/layout/activity_store_orders.xml
+++ b/app/src/main/res/layout/activity_store_orders.xml
@@ -6,4 +6,41 @@
     android:layout_height="match_parent"
     tools:context=".StoreOrdersActivity">
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/storeOrdersTitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Spinner
+        android:id="@+id/selectOrderSpinner"
+        android:layout_width="379dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/viewSelectedOrderView"
+        android:layout_width="376dp"
+        android:layout_height="403dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/selectOrderSpinner" />
+
+    <Button
+        android:id="@+id/cancelSelectedOrderButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/cancelSelectedOrderButton"
+        app:layout_constraintEnd_toEndOf="@+id/viewSelectedOrderView"
+        app:layout_constraintStart_toStartOf="@+id/viewSelectedOrderView"
+        app:layout_constraintTop_toBottomOf="@+id/viewSelectedOrderView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
