--- a/app/src/main/res/layout/activity_store_orders.xml
+++ b/app/src/main/res/layout/activity_store_orders.xml
@@ -39,6 +39,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:clickable="false"
+        android:onClick="cancelCurrentOrder"
         android:text="@string/cancelSelectedOrderButton"
         app:layout_constraintEnd_toEndOf="@+id/viewSelectedOrderView"
         app:layout_constraintStart_toStartOf="@+id/viewSelectedOrderView"
